cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
set(PROJ_NAME MetadataManipulation)
project(${PROJ_NAME})
message("Configuring ${PROJ_NAME}")
find_package(VMF)
if(VMF_JAR_PATH)
  message("VMF_JAR_PATH = ${VMF_JAR_PATH}")
  find_package(Java 1.7 REQUIRED)
  include(UseJava)
  file(GLOB_RECURSE JAVA_SRC "src" "*.java")
  add_jar (${PROJ_NAME} ${JAVA_SRC} INCLUDE_JARS ${VMF_JAR_PATH} OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin)
  if(TARGET VMF_JAR_NAME)
    message("VMF_JAR_NAME is a target")
    add_dependencies(${PROJ_NAME} ${VMF_JAR_NAME})
  endif()
endif()
